--- a/mysite/myapp/templates/our_data.html
+++ b/mysite/myapp/templates/our_data.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +37,7 @@ ul.nav li:hover {
 img {
   border: 10px;
   border-style: solid;
-  border-color: white;
+  border-color: lightblue;
   margin: 0px 40px;
 }
 
@@ -46,7 +45,7 @@ form {
   align: center;
   border-width: 5px 0px;
   border-style: solid;
-  border-color: white;
+  border-color: lightblue;
   background: #eee;
   padding: 0px;
   border-spacing: 0px;
@@ -58,36 +57,17 @@ h1 {
 }
 </style>
 </head>
-<body style="background-color:white">
+<body>
 
   <ul class="nav">
-    <li><a href="http://127.0.0.1:8000/myapp/form/" class="active">Pitches</a></li>
-    <li><a href="http://127.0.0.1:8000/myapp/ourdata/"></a>Our Data</li>
+    <li><a href="http://127.0.0.1:8000/myapp/form/"></a>Pitches</a></li>
+    <li><a href="http://127.0.0.1:8000/myapp/ourdata/"class="active">Our Data</li>
     <li><a href="http://www.brooksbaseball.net/pfxVB/pfx.php"></a>pitchFX</a></li>
   	<li><a href="#"></a></li>
   </ul>
+<h1> READ ME METHODOLOGY/DATA DESCRIPTION WILL GO HERE </h1>
 
 <p>
-
-<h1>Baseball Pitches, 2016: Were they Called Correctly?</h2>
-<p>
-
-
-<form action="{{ form_action }}"
-      method="{{ form_method }}">
-  {% if form_method == "post" %}
-    {% csrf_token %}
-  {% endif %}
-
-  {{ form.as_p }}
-  <button type="submit">
-    Go!
-  </button>
-</form>
-
-{% load static %}
-<img src="{% static 'current_img.png' %}"/>
-
 </div>
 <p>
 <a href='#top'>Top of Page</a>
