--- a/mysite/myapp/templates/form.html
+++ b/mysite/myapp/templates/form.html
@@ -38,9 +38,8 @@
       <div class="container">
         <nav class="blog-nav">
           <a class="blog-nav-item active" href="http://127.0.0.1:8000/myapp/form/">Pitches</a>
-          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/ourdata/">Our Data</li>
-          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">pitchFX</a>
-          <a class="blog-nav-item" href="#">About</a>
+          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/ourdata/">Readme</li>
+          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">PITCHf/x</a>
         </nav>
       </div>
     </div>
@@ -89,7 +88,12 @@
 
           </div><!-- /.blog-post -->
 
-
+  <footer class="blog-footer">
+        <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p>
+          <a href="#">Back to top</a>
+        </p>
+  </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
