update whole project

--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Baseball Pitches, 2016: Were they Called Correctly?</title>
+    <title>MLB Pitches, 2016: Were they Called Correctly?</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -48,8 +48,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title"> Baseball Pitches</h1>
-        <p class="lead blog-description">Were Baseballs Pitched in 2016 Called Correctly?</p>
+        <h1 class="blog-title"> MLB Pitches</h1>
+        <p class="lead blog-description">Were Pitches in the 2016 MLB Season Called Correctly?</p>
       </div>
 
       <div class="row">
@@ -86,7 +86,7 @@
             </html>
 
             <p><a href="#"></a></p>
-        
+
           </div><!-- /.blog-post -->
 
 
