--- a/mysite/myapp/templates/form.html
+++ b/mysite/myapp/templates/form.html
@@ -1,276 +1,270 @@
-<!DOCTYPE html>
-
-<html lang="en">
-  <head>
-    <style>
-    /*
-     * Globals
-     */
-
-    body {
-      font-family: Georgia, "Times New Roman", Times, serif;
-      color: #555;
-    }
-
-    h1, .h1,
-    h2, .h2,
-    h3, .h3,
-    h4, .h4,
-    h5, .h5,
-    h6, .h6 {
-      margin-top: 0;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-weight: normal;
-      color: #333;
-    }
-
-
-    /*
-     * Override Bootstrap's default container.
-     */
-
-    @media (min-width: 1200px) {
-      .container {
-        width: 970px;
-      }
-    }
-
-
-    /*
-     * Masthead for nav
-     */
-
-    .blog-masthead {
-      background-color: #428bca;
-      -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-              box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-    }
-
-    /* Nav links */
-    .blog-nav-item {
-      position: relative;
-      display: inline-block;
-      padding: 10px;
-      font-weight: 500;
-      color: #cdddeb;
-    }
-    .blog-nav-item:hover,
-    .blog-nav-item:focus {
-      color: #fff;
-      text-decoration: none;
-    }
-
-    /* Active state gets a caret at the bottom */
-    .blog-nav .active {
-      color: #fff;
-    }
-    .blog-nav .active:after {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 0;
-      height: 0;
-      margin-left: -5px;
-      vertical-align: middle;
-      content: " ";
-      border-right: 5px solid transparent;
-      border-bottom: 5px solid;
-      border-left: 5px solid transparent;
-    }
-
-
-    /*
-     * Blog name and description
-     */
-
-    .blog-header {
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-    .blog-title {
-      margin-top: 30px;
-      margin-bottom: 0;
-      font-size: 60px;
-      font-weight: normal;
-    }
-    .blog-description {
-      font-size: 20px;
-      color: #999;
-    }
-
-
-    /*
-     * Main column and sidebar layout
-     */
-
-    .blog-main {
-      font-size: 18px;
-      line-height: 1.5;
-    }
-
-    /* Sidebar modules for boxing content */
-    .sidebar-module {
-      padding: 15px;
-      margin: 0 -15px 15px;
-    }
-    .sidebar-module-inset {
-      padding: 15px;
-      background-color: #f5f5f5;
-      border-radius: 4px;
-    }
-    .sidebar-module-inset p:last-child,
-    .sidebar-module-inset ul:last-child,
-    .sidebar-module-inset ol:last-child {
-      margin-bottom: 0;
-    }
-
-
-    /* Pagination */
-    .pager {
-      margin-bottom: 60px;
-      text-align: left;
-    }
-    .pager > li > a {
-      width: 140px;
-      padding: 10px 20px;
-      text-align: center;
-      border-radius: 30px;
-    }
-
-
-    /*
-     * Blog posts
-     */
-
-    .blog-post {
-      margin-bottom: 60px;
-    }
-    .blog-post-title {
-      margin-bottom: 5px;
-      font-size: 40px;
-    }
-    .blog-post-meta {
-      margin-bottom: 20px;
-      color: #999;
-    }
-
-
-    /*
-     * Footer
-     */
-
-    .blog-footer {
-      padding: 40px 0;
-      color: #999;
-      text-align: center;
-      background-color: #f9f9f9;
-      border-top: 1px solid #e5e5e5;
-    }
-    .blog-footer p:last-child {
-      margin-bottom: 0;
-    }
-    </style>
-    <!-- <link rel="stylesheet" type="text/css" href="/myapp/templates/blog.css"> -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
-
-    <title>Baseball Pitches, 2016: Were they Called Correctly?</title>
-
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="blog.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item active" href="http://127.0.0.1:8000/myapp/form/">Pitches</a>
-          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/ourdata/">Readme</li>
-          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">PITCHf/x</a>
-        </nav>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <div class="blog-header">
-        <h1 class="blog-title"> Baseball Pitches</h1>
-        <p class="lead blog-description">Were Baseballs Pitched in 2016 Called Correctly?</p>
-      </div>
-
-      <div class="row">
-
-        <div class="col-sm-8 blog-main">
-
-          <div class="blog-post">
-            <h2 class="blog-post-title">MAKE THIS DYNAMIC BASED ON WHAT THEY PLOT</h2>
-            <p class="blog-post-meta">December, 2016 by <a href="#">Josh and Rachel</a></p>
-
-            <p>Use the form below to view a graph of the locations of baseball pitches from 2016.  Determine what variables you would like to use, and press "Go!"</p>
-            <hr>
-
-            <form action="{{ form_action }}"
-                  method="{{ form_method }}">
-              {% if form_method == "post" %}
-                {% csrf_token %}
-              {% endif %}
-
-              {{ form.as_p }}
-              <button type="submit">
-                Go!
-              </button>
-            </form>
-
-            {% load static %}
-            <img src="{% static 'current_img.png' %}"/>
-
-            </div>
-            <p>
-            <a href='#top'>Top of Page</a>
-            <p>
-            </body>
-            </html>
-
-            <p><a href="#"></a></p>
-
-          </div><!-- /.blog-post -->
-
-  <footer class="blog-footer">
-        <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        <p>
-          <a href="#">Back to top</a>
-        </p>
-  </footer>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <style>
+    /*
+     * Globals
+     */
+
+    body {
+      font-family: Georgia, "Times New Roman", Times, serif;
+      color: #555;
+    }
+
+    h1, .h1,
+    h2, .h2,
+    h3, .h3,
+    h4, .h4,
+    h5, .h5,
+    h6, .h6 {
+      margin-top: 0;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: normal;
+      color: #333;
+    }
+
+    /*
+     * Override Bootstrap's default container.
+     */
+
+    @media (min-width: 1200px) {
+      .container {
+        width: 970px;
+      }
+    }
+
+    /*
+     * Masthead for nav
+     */
+    .blog-masthead {
+      background-color: #428bca;
+      -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+              box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+    }
+
+    /* Nav links */
+    .blog-nav-item {
+      position: relative;
+      display: inline-block;
+      padding: 10px;
+      font-weight: 500;
+      color: #cdddeb;
+    }
+    .blog-nav-item:hover,
+    .blog-nav-item:focus {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    /* Active state gets a caret at the bottom */
+    .blog-nav .active {
+      color: #fff;
+    }
+    .blog-nav .active:after {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 0;
+      height: 0;
+      margin-left: -5px;
+      vertical-align: middle;
+      content: " ";
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid;
+      border-left: 5px solid transparent;
+    }
+
+    /*
+     * Blog name and description
+     */
+
+    .blog-header {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+    .blog-title {
+      margin-top: 30px;
+      margin-bottom: 0;
+      font-size: 60px;
+      font-weight: normal;
+    }
+    .blog-description {
+      font-size: 20px;
+      color: #999;
+    }
+
+    /*
+     * Main column and sidebar layout
+     */
+
+    .blog-main {
+      font-size: 18px;
+      line-height: 1.5;
+    }
+
+    /* Sidebar modules for boxing content */
+    .sidebar-module {
+      padding: 15px;
+      margin: 0 -15px 15px;
+    }
+    .sidebar-module-inset {
+      padding: 15px;
+      background-color: #f5f5f5;
+      border-radius: 4px;
+    }
+    .sidebar-module-inset p:last-child,
+    .sidebar-module-inset ul:last-child,
+    .sidebar-module-inset ol:last-child {
+      margin-bottom: 0;
+    }
+
+    /* Pagination */
+    .pager {
+      margin-bottom: 60px;
+      text-align: left;
+    }
+    .pager > li > a {
+      width: 140px;
+      padding: 10px 20px;
+      text-align: center;
+      border-radius: 30px;
+    }
+
+    /*
+     * Blog posts
+     */
+    .blog-post {
+      margin-bottom: 60px;
+    }
+    .blog-post-title {
+      margin-bottom: 5px;
+      font-size: 40px;
+    }
+    .blog-post-meta {
+      margin-bottom: 20px;
+      color: #999;
+    }
+    /*
+     * Footer
+     */
+
+    .blog-footer {
+      padding: 40px 0;
+      color: #999;
+      text-align: center;
+      background-color: #f9f9f9;
+      border-top: 1px solid #e5e5e5;
+    }
+    .blog-footer p:last-child {
+      margin-bottom: 0;
+    }
+    </style>
+    <!-- <link rel="stylesheet" type="text/css" href="/myapp/templates/blog.css"> -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+
+    <title>Baseball Pitches, 2016: Were they Called Correctly?</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="blog.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="blog-nav">
+          <a class="blog-nav-item active" href="http://127.0.0.1:8000/myapp/">Pitches</a>
+          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/form2/">Pitches by Player</a>
+          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/ourdata/">Readme</li>
+          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">PITCHf/x</a>
+
+        </nav>
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="blog-header">
+        <h1 class="blog-title"> Baseball Pitches</h1>
+        <p class="lead blog-description">Were Baseballs Pitched in 2016 Called Correctly?</p>
+      </div>
+
+      <div class="row">
+
+        <div class="col-sm-8 blog-main">
+
+          <div class="blog-post">
+            <h2 class="blog-post-title">Does Pitcher Race Affect how the Pitch is Called?</h2>
+            <p class="blog-post-meta">December, 2016 by <a href="http://harris.uchicago.edu/directory/students/joshua_choper">Josh</a> and<a href="http://harris.uchicago.edu/directory/students/rachel_kupfer"> Rachel</a></p>
+
+            <p>Use the form below to view a graph of the locations of baseball pitches from 2016.  Determine what variables you would like to use, and press "Go!"</p>
+            <hr>
+
+            <form action="{{ form_action }}"
+                  method="{{ form_method }}">
+              {% if form_method == "post" %}
+                {% csrf_token %}
+              {% endif %}
+
+              {{ form.as_p }}
+              <button type="submit">
+                Go!
+              </button>
+            </form>
+            <p></p>
+            <p></p>
+            <p><h2>{% block title %}Plotting Balls and Called Strikes by
+              {{ pitcher_race }}, {{ pitcher_ethnicity }} Pitchers in {{ home_or_away }} Games{% endblock %}</h2></p>
+            {% load static %}
+            <img src="{% static 'current_img.png' %}"/>
+
+            </div>
+            <p>
+            <a href='#top'>Top of Page</a>
+            <p>
+            </body>
+            </html>
+
+            <p><a href="#"></a></p>
+
+          </div><!-- /.blog-post -->
+
+  <footer class="blog-footer">
+        <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p>
+          <a href="#">Back to top</a>
+        </p>
+  </footer>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
