--- a/mysite/myapp/templates/our_data.html
+++ b/mysite/myapp/templates/our_data.html
@@ -205,9 +205,10 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/form/">Pitches</a>
-          <a class="blog-nav-item active" href="http://127.0.0.1:8000/myapp/ourdata/">Our Data</li>
-          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">pitchFX</a>
+          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/">Pitches</a>
+          <a class="blog-nav-item" href="http://127.0.0.1:8000/myapp/form2/">Pitches by Player</a>
+          <a class="blog-nav-item active" href="http://127.0.0.1:8000/myapp/ourdata/">Readme</li>
+          <a class="blog-nav-item" href="http://www.brooksbaseball.net/pfxVB/pfx.php">PITCHf/x</a>
         </nav>
       </div>
     </div>
@@ -224,8 +225,7 @@
 
           <div class="blog-post">
             <h2 class="blog-post-title">Our Methodology for and Aim of this Website</h2>
-            <p class="blog-post-meta">December, 2016 by <a href="#">Josh and Rachel</a></p>
-
+            <p class="blog-post-meta">December, 2016 by <a href="http://harris.uchicago.edu/directory/students/joshua_choper">Josh</a> and<a href="http://harris.uchicago.edu/directory/students/rachel_kupfer"> Rachel</a></p>
             <p>Why did we create this app?</p>
             <hr>
 
@@ -234,7 +234,8 @@
             <p><h2>In order to run this app:</h2></p>
             <ol>
               <li>First, run the server: <pre><code>python manage.py runserver</code></pre></li>
-              <li>Copy and paste <a href=http://127.0.0.1:8000/myapp/form/>this ("http://127.0.0.1:8000/myapp/form/")</a> into your web browser to run it.</li>
+              <li>Copy and paste <a href=http://127.0.0.1:8000/myapp/>this ("http://127.0.0.1:8000/myapp/")</a> into your web browser to run it.</li>
+              <li> You can choose one of two forms in the navbar. You can either filter by demographic variables under "Pitches" or by pitcher under "Pitches by Player". </li>
               <li>Use the form to create the graph you are interested in (pick the race, ethnicity, and game status (home/away)).  The press "Go!" </li>
             </ol>
             <p>Once you do this, a graph will display itself underneath the form.  Please feel free to change the graph you are looking at by playing around with the dropdown menus.</p>
